Fixed bug #42027 is_file() / is_dir() matches file/dirnames with wildcard char or trailing slash